- Fixed bug #41964 (strtotime returns a timestamp for non-time string of   pattern '(A|a) .+'). - Fixed bug #41844 (Format returns incorrect number of digits for negative   years -0001 to -0999). - Fixed bug #41842 (Cannot create years < 0100 & negative years with   date_create or new DateTime). - Fixed bug #41709 (strtotime() does not handle 00.00.0000). - Fixed bug #41523 (strtotime('0000-00-00 00:00:00') is parsed as 1999-11-30).